_sass/main.scss
$background-color: #1c1c1c;
$monospace-hierarchy: Courier, Menlo, monospace;

* {
  color: white;
  font-family: "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

a#title {
  font-size: 300%;
  text-decoration: none;
  display: block;
  margin: 0 0 20px 0;
  font-family: "Century Gothic", Futura, "Avenir Next", Avenir, "Helvetica Neue", Helvetica, Arial, sans-serif;
  padding-top: 20px;
}

h2 {
  font-weight: 700;
}

p, li:not(nav) {
  font-size: 1.2em;
}

html, body {
  height: 100%;
  margin: 0;
}

body {
  background-color: $background-color;
}

p#footer {
  display: flex;
  margin: auto;
  align-items:center;
  justify-content:center;
  font-size: small;
  position: relative;
  bottom: 60px;
  height: 60px;

}

div#main {
  width: 70%;
  padding-bottom: 60px;
  margin: 0 auto 0 auto;
  position: relative;
  min-height: calc(100% - 60px - 20px);
}

nav {
  text-align: center;

  ul {
    padding: 0;
    text-align: center;
    white-space: nowrap;
    overflow: scroll;
    display: inline-block;
    font-size: 0; // Prevents gap created by HTML newlines
    background-color: #898989;
    border-radius: 10px;

    > li {
      display: inline-block;
      margin: 0;

      > a {
        font-size: 20px;
        text-align: center;
        text-decoration: none;
        font-weight: 600;
        padding: 0 20px;
        color: $background-color;

        &:hover {
          text-decoration: underline;
        }

        &#currentPage {
          background-color: white;
        }
      }
    }
  }
}

input {
  color: black;
}

.highlighter-rouge {
  > .highlight {
    padding: 20px;
    overflow: scroll;
    border-radius: 20px;
  }

  * {
    font-family: $monospace-hierarchy;
  }
}

/* Mobile */
@media only screen and (max-width: 480pt) {
  p, li:not(nav) {
    font-size: 1.5em;
    margin: 0 5px 0 5px
  }

  h2 {
    font-size: 2em;
    text-align: center;
    margin-bottom: 10px;
  }

  div#main {
    width: 90%;
    padding-bottom: 90px;
  }

  a#title {
    font-size: 2.7em;
    text-align: center;
  }
}

